--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 719324863898058832
 textchannel = 719324863457656865
 ladderchannel = 
 jungsanchannel = 
