--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -6,28 +6,28 @@ startDate = 2020-06-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 라탑1층
+bossname = 라데1층
 bosstime = 21:00
 genPeriod = 24:00
 startDate = 2020-06-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 라탑2층
+bossname = 라데2층
 bosstime = 22:00
 genPeriod = 24:00
 startDate = 2020-06-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 라탑3층
+bossname = 라데3층
 bosstime = 23:00
 genPeriod = 24:00
 startDate = 2020-06-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 라탑4층
+bossname = 라데4층
 bosstime = 23:59
 genPeriod = 24:00
 startDate = 2020-06-06
